# ailys-project

./: README.md  pyproject.toml
data/: combined.csv
notebooks/: eda.ipynb  merge_data.ipynb
visualization/: ydata_profiling_result.html
