[project]
name = "ailys-project"
version = "0.1.0"
description = ""
authors = [
    {name = "seaweedsoup98",email = "seaweedsoup98@gmail.com"}
]
readme = "README.md"
requires-python = "<3.13,>=3.12"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "ipywidgets (>=8.1.5,<9.0.0)",
    "numpy (>=1.16.0,<2.2)",
    "pandas (>=2.2.3,<3.0.0)",
    "sdmxthon (>=2.6.7,<3.0.0)",
    "matplotlib (>=3.5,<=3.10)",
    "plotly (>=6.0.0,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ydata-profiling (>=4.13.0,<5.0.0)",
    "setuptools (>=76.0.0,<77.0.0)",
    "scipy (>=1.4.1,<1.14)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
